Página de produtos parcialmente desenvolvida

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,12 @@
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>React App</title>
+    <meta name="Amerifan E-commerce" content="E-commerce de itens variados"/>
+    <meta name="keywords" content="E-commerce, compras online, loja, entrega grátis"/>
+    <meta name="author" content="John Ítalo Lucas Lima"/>
+    <title>Amerifan</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
