--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="Amerifan E-commerce" content="E-commerce de itens variados"/>
-    <meta name="keywords" content="E-commerce, compras online, loja, entrega grátis"/>
-    <meta name="author" content="John Ítalo Lucas Lima"/>
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
+
+ 
+    <meta name="description" content="Author: A.N. Author,
+    Illustrator: P. Picture, Category: Books, Price: $17.99,
+    Length: 784 pages">
+    <meta
+  name="description"
+  content="Mary's simple recipe for maple bacon donuts
+           makes a sticky, sweet treat with just a hint
+           of salt that you'll keep coming back for.">
+   
     <title>Amerifan</title>
   </head>
   <body>
@@ -14,4 +21,5 @@
     <div id="root"></div>
   
   </body>
+  <meta name="robots" content="nofollow" />
 </html>
